--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,101 @@
-fastapi
-pydantic
-joblib
-numpy
-pandas
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.0
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorama==0.4.6
+dask==2024.9.0
+dask-expr==1.1.14
+dataclasses-json==0.6.7
+datasets==3.0.0
+dill==0.3.8
+fastapi==0.115.0
+filelock==3.16.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+google-ai-generativelanguage==0.6.6
+google-api-core==2.20.0
+google-api-python-client==2.147.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
+grpcio==1.66.2
+grpcio-status==1.62.3
+gTTS==2.5.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.6
+httplib2==0.22.0
+httpx==0.27.2
+huggingface-hub==0.25.0
+Hypercorn==0.17.3
+hyperframe==6.0.1
+idna==3.10
+importlib_metadata==8.5.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.1
+langchain-community==0.3.1
+langchain-core==0.3.7
+langchain-google-genai==2.0.0
+langchain-text-splitters==0.3.0
+langsmith==0.1.129
+locket==1.0.0
+marshmallow==3.22.0
+multidict==6.1.0
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+numpy==1.26.4
+orjson==3.10.7
+packaging==24.1
+pandas==2.2.3
+partd==1.4.2
+priority==2.0.0
+proto-plus==1.24.0
+protobuf==4.25.5
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+rsa==4.9
 scikit-learn==1.3.2
-requests
-hypercorn
-fsspec
-huggingface_hub
-datasets
+scipy==1.14.1
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.38.6
+tavily-python==0.5.0
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+toolz==0.12.1
+tqdm==4.66.5
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.3
+uvicorn==0.30.6
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.12.1
+zipp==3.20.2
