--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ google-auth-httplib2==0.2.0
 google-generativeai==0.7.2
 googleapis-common-protos==1.65.0
 greenlet==3.1.1
-grpcio==1.66.2
+grpcio
 grpcio-status==1.62.3
 gTTS==2.5.3
 h11==0.14.0
@@ -94,8 +94,9 @@ typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.3
-uvicorn==0.30.6
+uvicorn[standard]
 wsproto==1.2.0
 xxhash==3.5.0
 yarl==1.12.1
 zipp==3.20.2
+speechRecognition
