--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ data/movies
 checkpoint.sqlite3
 checkpoint.sqlite3-shm
 checkpoint.sqlite3-wal
+
+data/anime
+data/games
+
+models/anime_recommendation
+models/movie_recommendation
+
